<resources>
    <string name="app_name">AppStreetAssignment</string>
    <string name="dummy_author_text">Author:</string>
    <string name="dummy_author_text_value">N/A</string>
    <string name="dummy_title_text">Title:</string>
    <string name="dummy_title_text_value">N/A</string>
    <string name="dummy_description_text">Description:</string>
    <string name="dummy_description_text_value">N/A</string>
    <string name="dummy_content_text">Content:</string>
    <string name="dummy_content_text_value">N/A</string>
    <string name="dummy_Url_text">Url:</string>
    <string name="dummy_Url_text_value">N/A</string>
    <string name="dummy_Published_text">Published At:</string>
    <string name="news_feed">News Feeds</string>
    <string name="dummy_Published_text_value">N/A</string>


</resources>
