<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:contentDescription="@string/app_name"
                android:scaleType="centerCrop"
                android:src="@drawable/default_image"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:title="News"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.AppCompat.Light"></android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"

        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/authorTextHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_author_text" />

                <TextView
                    android:id="@+id/authorvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/authorTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_author_text_value" />

                <TextView
                    android:id="@+id/titleTextHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authorTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_title_text" />

                <TextView
                    android:id="@+id/titleTextValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/authorvalue"
                    android:layout_toRightOf="@+id/titleTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_title_text_value"
                    android:transitionName="Text_Shared"

                    />

                <TextView
                    android:id="@+id/descriptionTextHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_description_text"
                    android:transitionName="description_shared"

                    />

                <TextView
                    android:id="@+id/descriptionTextvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/titleTextValue"
                    android:layout_toRightOf="@+id/descriptionTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_description_text_value" />

                <TextView
                    android:id="@+id/urlTextHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_Url_text" />

                <TextView
                    android:id="@+id/urlTextvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/descriptionTextvalue"
                    android:layout_toRightOf="@+id/urlTextHeading"
                    android:padding="@dimen/edittextpadding"
                    android:text="@string/dummy_Url_text_value" />


                <TextView
                    android:id="@+id/publishedText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_Published_text"
                    android:padding="@dimen/edittextpadding"
                    android:layout_below="@+id/urlTextHeading"

                    />
                <TextView
                    android:id="@+id/publishedValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dummy_Published_text_value"
                    android:layout_toRightOf="@+id/publishedText"
                    android:padding="@dimen/edittextpadding"

                    android:layout_below="@+id/urlTextvalue"

                    />
            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>